# Pico_lvgl

./: .gitignore  CMakeLists.txt  Pico_lvgl.c  Pico_lvgl.h  Pico_lvgl_ssd1306.c  Pico_lvgl_ssd1306.h  README.md  lv_conf.h  lv_port_disp.c  lv_port_indev.c  lv_port_indev.h  ui.c  ui.h
fonts/: arial_b_14.c
images/: Box.h  circle_16x16x3.h  img2array.py  mind.h
lvgl/: CMakeLists.txt
sh1106/: CMakeLists.txt  sh1106.c  sh1106.h
ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h
