# # Option to define LV_LVGL_H_INCLUDE_SIMPLE, default: ON
# option(LV_LVGL_H_INCLUDE_SIMPLE
#        "Use #include \"lvgl.h\" instead of #include \"../../lvgl.h\"" ON)

# # Option to define LV_CONF_INCLUDE_SIMPLE, default: ON
# option(LV_CONF_INCLUDE_SIMPLE
#        "Use #include \"lv_conf.h\" instead of #include \"../../lv_conf.h\"" ON)

add_library(lvgl INTERFACE)

file(GLOB_RECURSE SOURCES /src/*.c src/*.S) 

target_sources(lvgl INTERFACE
      ${SOURCES}
)

target_include_directories(lvgl INTERFACE
      ${CMAKE_CURRENT_LIST_DIR}
      ${CMAKE_CURRENT_LIST_DIR}/..
)
